--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 </p> 
 
                 <div>
-                    <button type="button"> <span></span> Click here</button>
-                    <button type="button"> <span></span> submit</button>
+                    <button type="button"> <span></span> LOGIN</button>
+                    <button type="button"> <span></span> SEARCH</button>
                 </div>
             </div>
 
