--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 </head>
 <body>
     <div class="banner">
+
+            <video autoplay loop muted plays-inline>
+                <source src="darksky.mp4" type="video/mp4">
+            </video>
+
         <div class="navbar">
             <img src="logo.png" class="logo">
             <ul>
@@ -17,15 +22,17 @@
             </ul>
         </div>
             <div class="content">
-                <h1>We're BEST</h1>
+                <h1>BUILDING THE FUTURE, RESTORING THE PAST.</h1>
+                <br>
                 <p>
-                    <i>
-                        Behind Every Successful thing
-                    </i> 
+                        We're BEST
                 </p> 
 
+                <br>
+                <br>
+
                 <div>
-                    <button type="button"> <span></span> LOGIN</button>
+                    <button type="button"> <span></span> EXPLORE</button>
                     <button type="button"> <span></span> SEARCH</button>
                 </div>
             </div>
