--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="banner">
 
             <video autoplay loop muted plays-inline>
-                <source src="darksky.mp4" type="video/mp4">
+                <source src="dark.mp4" type="video/mp4">
             </video>
 
         <div class="navbar">
