--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Website 001</title>
+    <title>Acme Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="banner">
 
             <video autoplay loop muted plays-inline>
-                <source src="dark.mp4" type="video/mp4">
+                <source src="media/dark.mp4" type="video/mp4">
             </video>
 
         <div class="navbar">
-            <img src="logo.png" class="logo">
+            <img src="media/logo.png" class="logo">
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Companies</a></li>
@@ -21,14 +21,13 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </div>
+
             <div class="content">
-                <h1>BUILDING THE FUTURE, RESTORING THE PAST.</h1>
+                <h1>BUILDING THE FUTURE,RESTORING THE PAST.</h1>
                 <br>
                 <p>
-                        We're BEST
+                    We're BEST
                 </p> 
-
-                <br>
                 <br>
 
                 <div>
