contacts page started

--- a/gallery.html
+++ b/gallery.html
@@ -14,11 +14,11 @@
         <div class="navbar">
             <img src="media/logo.png" class="logo">
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Companies</a></li>
-                <li><a href="#">Gallery</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
 
@@ -30,10 +30,11 @@
        <div class="container">
         <div class="photo-gallery">
             <div class="column">
-                        <div class="card">
-                            <div class="photo">
-                                <img src="media/imgarch (2).jpg" alt="">
-                            </div>
+                   
+
+                    <div class="photo">
+                        <img src="media/imgstu.jpg" alt="">
+                    </div>
                             <div class="intro">
                                 <h1>Architecture</h1>
                                 <p>We believe that architecture and design matter,
@@ -42,32 +43,31 @@
                                 but serve as catalysts for positive urban and social change.
                                 </p>
                             </div>
-                        </div>
 
-                <div class="photo">
-                    <img src="media/imgstu.jpg" alt="">
-                </div>
-                        <div class="intro">
-                            <h1>Architecture</h1>
-                            <p>We believe that architecture and design matter,
-                            and that through our work, we can make a positive difference in the world.
-                            We strive to create buildings that are not just things in themselves, 
-                            but serve as catalysts for positive urban and social change.
-                            </p>
-                        </div>
+                    <div class="photo">
+                        <img src="media/imgarch (2).jpg" alt="">
+                    </div>
+                            <div class="intro">
+                                <h1>Architecture</h1>
+                                <p>We believe that architecture and design matter,
+                                and that through our work, we can make a positive difference in the world.
+                                We strive to create buildings that are not just things in themselves, 
+                                but serve as catalysts for positive urban and social change.
+                                </p>
+                            </div>
 
 
-                <div class="photo">
-                    <img src="media/imgconst (2).jpg" alt="">
-                </div>
-                        <div class="intro">
-                            <h1>Architecture</h1>
-                            <p>We believe that architecture and design matter,
-                            and that through our work, we can make a positive difference in the world.
-                            We strive to create buildings that are not just things in themselves, 
-                            but serve as catalysts for positive urban and social change.
-                            </p>
-                        </div>
+                    <div class="photo">
+                        <img src="media/imgconst (2).jpg" alt="">
+                    </div>
+                            <div class="intro">
+                                <h1>Architecture</h1>
+                                <p>We believe that architecture and design matter,
+                                and that through our work, we can make a positive difference in the world.
+                                We strive to create buildings that are not just things in themselves, 
+                                but serve as catalysts for positive urban and social change.
+                                </p>
+                            </div>
             </div>
 
             <div class="column">
